cluster/apps/default/pufferpanel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pufferpanel
  namespace: default
spec:
  type: ExternalName
  externalName: 10.10.10.92
  ports:
    - port: 8080
