cluster/apps/default/pufferpanel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: https://avatars.githubusercontent.com/u/45698031

  name: pufferpanel
  namespace: default
spec:
  rules:
  - host: panel.witlinserver.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pufferpanel
            port: 
              number: 8080
  tls: 
  - hosts:
    - panel.witlinserver.com
    secretName: pufferpanel-cert
